<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashScreen">

    <ImageView
        android:scaleType="fitXY"
        android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/splashBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    `<ImageView
        android:layout_margin="10dp"
        android:minWidth="180dp"
        android:minHeight="48dp"
        android:layout_gravity="top|end"
        android:id="@+id/universityLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/grey"
            android:text="@string/greeting_text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/grey"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/greeting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <FrameLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:padding="10dp"
            android:id="@+id/dashboardCalculator"
            android:background="@drawable/white_violet_bg"
            android:textColor="@color/white"
            android:layout_gravity="start|center"
            android:text="@string/greeting_button"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:padding="10dp"
            android:id="@+id/openPopUpCredits"
            android:background="@drawable/white_pink_bg"
            android:textColor="@color/white"
            android:layout_gravity="end|center"
            android:text="@string/greeting_credits"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
            android:visibility="gone"
            android:layout_margin="10dp"
            android:id="@+id/creditsPopUpWrapper"
            android:background="@drawable/bg_transparent_black_round"
            android:layout_gravity="bottom|center"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/greeting_credits"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/closeButtonCredit"
                android:layout_gravity="center|end"
                android:background="@drawable/baseline_close_24"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    style="@style/creditsTableText"
                    android:text="@string/credit_name"/>
                <TextView
                    style="@style/creditsTableText"
                    android:text="@string/credit_val_name"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/creditsTableText"
                    android:text="@string/credit_nim"/>
                <TextView
                    style="@style/creditsTableText"
                    android:text="@string/credit_val_nim"/>
            </TableRow>

            <TableRow>
                <TextView
                        style="@style/creditsTableText"
                        android:text="@string/credit_subject"/>
                <TextView
                        style="@style/creditsTableText"
                        android:text="@string/credit_val_subject"/>
            </TableRow>

            <TableRow>
                <TextView
                        style="@style/creditsTableText"
                        android:text="@string/credit_teacher"/>
                <TextView
                        style="@style/creditsTableText"
                        android:text="@string/credit_val_teacher"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</FrameLayout>